--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@types/react": "^17.0.50",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "nodemon": "^2.0.12",
@@ -26,9 +25,12 @@
   "devDependencies": {
     "@hot-loader/react-dom": "^17.0.1",
     "@types/jest": "^28.1.6",
+    "@types/react": "^17.0.62",
+    "@types/react-dom": "^18.2.6",
     "clean-webpack-plugin": "^4.0.0",
     "cross-env": "^7.0.3",
     "css-loader": "^3.4.2",
+    "file-loader": "^6.2.0",
     "gh-pages": "^4.0.0",
     "html-webpack-plugin": "^4.5.2",
     "jest": "^28.1.3",
@@ -39,6 +41,7 @@
     "ts-jest": "^28.0.7",
     "ts-loader": "^6.2.1",
     "typescript": "4.6.4",
+    "url-loader": "^4.1.1",
     "webpack": "^4.42.0",
     "webpack-cli": "^3.3.11",
     "webpack-dev-middleware": "^3.7.3",
